# ECS

./: .appveyor.yml  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Sources/: CMakeLists.txt  Export.hpp  StdAfx.hpp
Sources/ECS/: Component.hpp  Entity.cpp  Entity.hpp  Event.hpp  EventDispatcher.cpp  EventDispatcher.hpp  Log.cpp  System.cpp  System.hpp  System.inl  World.cpp  World.hpp  World.inl
Sources/ECS/Detail/: ComponentFilter.cpp  ComponentFilter.hpp  ComponentHolder.cpp  ComponentHolder.hpp  EntityPool.cpp  EntityPool.hpp  SystemHolder.cpp  SystemHolder.hpp  TypeInfo.hpp
Sources/ECS/Exceptions/: Exception.cpp  Exception.hpp  InvalidComponent.cpp  InvalidComponent.hpp  InvalidEntity.cpp  InvalidEntity.hpp
Sources/Engine/: Log.cpp  Log.hpp
Sources/Helpers/: ConstExpr.hpp  Delegate.hpp  Factory.hpp  NonCopyable.hpp  Reference.hpp  TypeInfo.hpp
Sources/Scenes/: Camera.hpp  Component.hpp  ComponentFilter.hpp  Entity.cpp  Entity.hpp  Entity.inl  Event.hpp  EventDispatcher.cpp  EventDispatcher.hpp  Log.cpp  Log.hpp  Scene.cpp  Scene.hpp  Scene.inl  System.cpp  System.hpp  System.inl  World.cpp  World.hpp  World.inl
Sources/Scenes/Detail/: ComponentFilter.cpp  ComponentFilter.hpp  ComponentHolder.cpp  ComponentHolder.hpp  EntityPool.cpp  EntityPool.hpp  SystemHolder.cpp  SystemHolder.hpp  TypeInfo.hpp
Sources/Scenes/Holders/: ComponentFilter.cpp  ComponentFilter.hpp  ComponentHolder.cpp  ComponentHolder.hpp  EntityPool.cpp  EntityPool.hpp  SystemHolder.cpp  SystemHolder.hpp
Sources/Utils/: Delegate.hpp  Factory.hpp
Test/: CMakeLists.txt  Main.cpp
